treetop/calculator_grammar.treetop
# my_grammar.treetop
# You can use a .tt extension instead if you wish
grammar CalculatorGrammar
  rule expression
    number operator number
  end

  rule number
    [0-9]* [.]* [0-9]*
  end

  rule decimal
    [.]
  end

  rule operator
    '+' / '*' / '/' / '-'
  end
end
